--- a/index.html
+++ b/index.html
@@ -1,23 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <button class="btn btn-success">Click Me</button>
-    <div class="container-lg">
-        <h1>Bootstrap</h1>
-        <p>
-            Bootstrap (formerly Twitter Bootstrap) is a free and open-source CSS framework directed at responsive, mobile-first front-end web development. It contains HTML, CSS and (optionally) JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components.
-As of May 2023, Bootstrap is the 17th most starred project (4th most starred library) on GitHub, with over 164,000 stars.[4] According to W3Techs, Bootstrap is used by 19.2% of all websites.[5]
-        </p>
-    </div>
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,16 +49,19 @@ As of May 2023, Bootstrap is the 17th most starred project (4th most starred lib
     <div class="text-center space-y-6">
         <img src="logo.png" alt="Logo" class="mx-auto w-64 h-64 mb-8">
         <div class="flex flex-col items-center gap-5">
-            <a href="https://www.instagram.com" target="_blank" class="button-28">
+            <a href="https://www.instagram.com/klu_startupsociety?igsh=MWRyeGhmZzJia2tzMQ%3D%3D&utm_source=qr " target="_blank" class="button-28">
                 <i class="fab fa-instagram"></i> Instagram
             </a>
-            <a href="https://web.telegram.org" target="_blank" class="button-28">
+            <a href="https://t.me/+CQD7qJbDxNRmM2Fl" target="_blank" class="button-28">
                 <i class="fab fa-telegram-plane"></i> Telegram
             </a>
-            <a href="https://www.linkedin.com" target="_blank" class="button-28">
-                <i class="fab fa-linkedin"></i> LinkedIn
+            <a href="https://www.linkedin.com/company/startupsociety001/" target="_blank" class="button-28">
+                <i class="fab fa-linkedin"></i> LinkedIn Page
             </a>
-            <a href="https://www.example.com" target="_blank" class="button-28">
+            <a href="http://www.linkedin.com/in/startup-society01" target="_blank" class="button-28">
+                <i class="fab fa-linkedin"></i> LinkedIn Account
+            </a>
+            <a href="https://nas.io/startup-society-01" target="_blank" class="button-28">
                 <i class="fas fa-globe"></i> Content Website
             </a>
         </div>
