--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <body class="flex items-center justify-center h-screen bg-gradient-to-r from-black to-gray-700">
     <div class="text-center space-y-6">
         <img src="logo.png" alt="Logo" class="mx-auto w-64 h-64 mb-8">
+        <h2>StartUp Society</h2>
         <div class="flex flex-col items-center gap-5">
             <a href="https://www.instagram.com/klu_startupsociety?igsh=MWRyeGhmZzJia2tzMQ%3D%3D&utm_source=qr " target="_blank" class="button-28">
                 <i class="fab fa-instagram"></i> Instagram
