--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
 </head>
 <body class="flex items-center justify-center h-screen bg-gradient-to-r from-black to-gray-700">
     <div class="text-center space-y-6">
-        <img src="logo.png" alt="Logo" class="mx-auto w-64 h-64 mb-8">
+        <img src="logo.png" alt="Logo" class="mx-auto w-64 h-64 mb-2">
+        <!-- Adding Startup Society text below the logo -->
+        <h1 class="text-white text-3xl font-semibold mb-2">Startup Society</h1>
+        <!-- Adding tagline below the Startup Society text -->
+        <p class="text-white text-xl font-light mb-8">Connecting today, Empowering tomorrow</p>
         <div class="flex flex-col items-center gap-5">
-            <a href="https://www.instagram.com/klu_startupsociety?igsh=MWRyeGhmZzJia2tzMQ%3D%3D&utm_source=qr " target="_blank" class="button-28">
+            <a href="https://www.instagram.com/klu_startupsociety?igsh=MWRyeGhmZzJia2tzMQ%3D%3D&utm_source=qr" target="_blank" class="button-28">
                 <i class="fab fa-instagram"></i> Instagram
             </a>
             <a href="https://t.me/+CQD7qJbDxNRmM2Fl" target="_blank" class="button-28">
