--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- Adding Startup Society text below the logo -->
         <h1 class="text-white text-3xl font-semibold mb-2">Startup Society</h1>
         <!-- Adding tagline below the Startup Society text -->
-        <p class="text-white text-xl font-light mb-8">Connecting today, Empowering tomorrow</p>
+        <p class="text-white text-xl font-light mb-8">Connecting Today, Empowering Tomorrow</p>
         <div class="flex flex-col items-center gap-5">
             <a href="https://www.instagram.com/klu_startupsociety?igsh=MWRyeGhmZzJia2tzMQ%3D%3D&utm_source=qr" target="_blank" class="button-28">
                 <i class="fab fa-instagram"></i> Instagram
